--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "body-parser": "^1.19.0",
     "concurrently": "^4.1.0",
     "express": "^4.16.4",
+    "mongoose": "^5.5.12",
     "multer": "^1.4.1"
   }
 }
