--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   "homepage": "https://github.com/Annmayn/Face-recognition#readme",
   "dependencies": {
     "body-parser": "^1.19.0",
+    "cloudinary": "^1.14.0",
     "concurrently": "^4.1.0",
     "express": "^4.16.4",
     "mongoose": "^5.5.12",
