--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "concurrently": "^4.1.0",
     "express": "^4.16.4",
     "mongoose": "^5.5.12",
-    "multer": "^1.4.1"
+    "multer": "^1.4.1",
+    "react-router-dom": "^5.0.1"
   }
 }
