--- a/package.json
+++ b/package.json
@@ -27,7 +27,8 @@
     "concurrently": "^4.1.0",
     "express": "^4.16.4",
     "mongoose": "^5.5.12",
-    "multer": "^1.4.1"
-    
+    "multer": "^1.4.1",
+    "react-gesture-gallery": "^1.0.0",
+    "react-gesture-responder": "^2.1.0"
   }
 }
