--- a/package.json
+++ b/package.json
@@ -29,6 +29,8 @@
     "mongoose": "^5.5.12",
     "multer": "^1.4.1",
     "react-gesture-gallery": "^1.0.0",
-    "react-gesture-responder": "^2.1.0"
+    "react-gesture-responder": "^2.1.0",
+    "react-icons": "^3.7.0",
+    "react-minimal-pie-chart": "^5.0.0"
   }
 }
